# hammocking

./: .buildinfo  .gitignore  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  architecture.html  build.ps1  contribution.html  design.html  genindex.html  hammock.py  index.html  install-mandatory.list  installation.html  main.c  main.h  mockup.c  mockup.h  mockups.mockup  motivation.html  objects.inv  pytest.ini  requirements.html  search.html  searchindex.js  setup.py  some-chapter.html  usage.html  usecase.html
.github/workflows/: deploy.yml  linux.yml  windows.yml
Test/: hammock_test.py  mini_c_test.py  mockup_writer_test.py  utils.py
Test/data/gmock_test/test_add_function_get/: mockup.cc  mockup.h
Test/data/gmock_test/test_add_function_set_one_arg/: mockup.h
Test/data/gmock_test/test_empty_templates/: mockup.cc
_sources/: architecture.rst.txt  design.rst.txt  index.rst.txt  motivation.rst.txt  some-chapter.rst.txt  usage.rst.txt  usecase.rst.txt
doc/: Makefile
doc/source/: conf.py  contribution.rst  index.rst  installation.rst  motivation.rst  requirements.rst  usage.rst  usecase.rst
doc/source/diagrams/: .gitignore  Makefile  motivation.uxf  usage.uxf  usage_one_compile_unit_only.uxf  usage_one_or_more_compile_units.uxf  usecase_developer.uxf  usecase_production.uxf  usecase_unittest.uxf
doc/source/usage/examples/one_compile_unit/: .gitignore  CMakeLists.txt  Makefile  a.c  a.h  a_test.c  c.h
doc/source/usage/examples/one_or_more_compile_units/: .gitignore  CMakeLists.txt  Makefile  a.h  a_1.c  a_2.c
doc/source/usage/examples/one_or_more_compile_units_gmock/: CMakeLists.txt  b.h
hammock/: __main__.py  hammock.py
hammocking/: __main__.py  hammocking.ini  hammocking.py
hammocking/templates/gmock/: mockup.cc.j2  mockup.h.j2
hammocking/templates/plain_c/: mockup.c.j2  mockup.h.j2
resources/mini_c/: CMakeLists.txt  Makefile  hammock.cc  hammock.hh  iut.c  iut.h  main.c  main.h  mockup.cc  mockup.h  test.cc
resources/mini_c/include/: argcheck.h  cardinality.h
resources/mini_c_gmock/: CMakeLists.txt  Readme.md  Readme.uxf  a.uxf  b.c  b.h  b.uxf  b_test.cc  c.h  c.uxf  mockup.cc  mockup.h
resources/mini_c_plink/: CMakeLists.txt  b.c  main.c  main.h
resources/mini_c_symbols/: CMakeLists.txt  main.c
src/: __init__.py  hammock.py  mockup_writer.py
src/hammock/: hammock.py
src/templates/gmock/: mockup.h.j2
tests/: hammock_test.py  hammocking_test.py  mini_c_test.py  utils.py
tests/data/gmock_test/test_add_function_get/: mockup.cc  mockup.h
tests/data/gmock_test/test_add_function_set_one_arg/: mockup.cc  mockup.h
tests/data/gmock_test/test_add_function_with_unnamed_arg/: mockup.cc  mockup.h
tests/data/gmock_test/test_empty_templates/: mockup.cc  mockup.h
tests/data/gmock_test/test_mini_c_gmock/: mockup.cc  mockup.h
tests/data/mini_c++_test/: some_header.h  stdbool.h  use_bool.c
tests/data/mini_c_test/: .gitignore  CMakeLists.txt  a.h  b.c  b_test.cc
tests/data/mini_c_test/includes/: a.h  b.h
